<resources>

    <string name="app_name">Baking Time</string>

    <!-- Main Activity -->
    <string name="main_label">Baking Time</string>
    <string name="error_checknetwork">No results found. Check your network connection</string>

    <!-- Recipe Step List -->
    <string name="recipe_steps_label">Recipe Steps:</string>
    <string name="ingredients">Recipe Ingredients</string>
    <string name="divider">Divider</string>

    <!--Ingredients-->
    <string name="ingredients_header">Ingredients for %1$s</string>

    <!--Detail-->
    <string name="detail_nav_prev">Previous</string>
    <string name="detail_nav_next">Next</string>
    <string name="detail_thumbnail_description">Recipe Step Image</string>
    <string name="detail_thumbnail_error_loading">Error loading thumbnail image</string>

    <!--Widget-->
    <string name="widget_config_header">Select Recipe</string>
    <string name="widget_header">Ingredients for %1$s</string>
    <string name="widget_empty_name">Recipe</string>
    <string name="widget_ingredients_error">Error</string>

</resources>
