<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--Recipe Ingredients (button)-->
    <TextView
        android:id="@+id/recipe_steps_ingredients"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recipe_step_height"
        android:layout_marginEnd="@dimen/recipe_step_margin_horizontal"
        android:layout_marginLeft="@dimen/recipe_step_margin_horizontal"
        android:layout_marginRight="@dimen/recipe_step_margin_horizontal"
        android:layout_marginStart="@dimen/recipe_step_margin_horizontal"
        android:layout_marginTop="@dimen/recipe_step_margin_vertical"
        android:background="@color/steps_ingredient_background"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/ingredients"
        android:textColor="@color/steps_ingredient_text"
        android:textSize="@dimen/recipe_step_textsize" />

    <!--Recipe Steps (label)-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/recipe_step_margin_vertical"
        android:layout_marginStart="@dimen/recipe_step_paddingleft"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="@dimen/recipe_step_margin_vertical"
        android:paddingEnd="@dimen/recipe_step_paddingright"
        android:paddingStart="@dimen/recipe_step_paddingleft"
        android:paddingTop="@dimen/recipe_step_margin_vertical"
        android:text="@string/recipe_steps_label"
        android:textColor="@color/steps_ingredient_text"
        android:textSize="@dimen/recipe_step_textsize" />

    <!--Divider-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="@dimen/recipe_step_margin_horizontal"
        android:layout_marginLeft="@dimen/recipe_step_margin_horizontal"
        android:layout_marginRight="@dimen/recipe_step_margin_horizontal"
        android:layout_marginStart="@dimen/recipe_step_margin_horizontal"
        android:background="@color/colorPrimaryLight"
        android:contentDescription="@string/divider" />

    <!--List of recipe steps (recipe_step_item)-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_steps_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>