<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Header-->
    <TextView
        android:id="@+id/detail_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/detail_header_background"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="@dimen/detail_header_spacing"
        android:paddingTop="@dimen/detail_header_spacing"
        android:textAlignment="center"
        android:textColor="@color/detail_header_text"
        android:textSize="@dimen/detail_header_textsize"
        tools:text="Step Details" />

    <!-- Thumbnail Image (if exists) -->
    <ImageView
        android:id="@+id/detail_thumbnail_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="@dimen/detail_margin_horizontal"
        android:layout_marginStart="@dimen/detail_margin_horizontal"
        android:layout_weight="2"
        android:contentDescription="@string/detail_thumbnail_description"
        android:paddingBottom="@dimen/detail_spacing_vertical"
        android:paddingTop="@dimen/detail_spacing_vertical"
        android:scaleType="fitCenter"
        android:visibility="gone" />

    <!-- Video player (if exists) -->
    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/detail_video"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/detail_margin_horizontal"
        android:layout_marginLeft="@dimen/detail_margin_horizontal"
        android:layout_marginRight="@dimen/detail_margin_horizontal"
        android:layout_marginStart="@dimen/detail_margin_horizontal"
        android:layout_marginTop="@dimen/detail_spacing_vertical"
        android:layout_weight="4"
        android:visibility="visible" />

    <!--Instructions text-->
    <TextView
        android:id="@+id/detail_instructions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/detail_margin_horizontal"
        android:layout_marginLeft="@dimen/detail_margin_horizontal"
        android:layout_marginRight="@dimen/detail_margin_horizontal"
        android:layout_marginStart="@dimen/detail_margin_horizontal"
        android:layout_marginTop="@dimen/detail_spacing_vertical"
        android:layout_weight="4"
        android:textColor="@color/detail_header_text"
        android:textSize="@dimen/detail_textsize"
        android:visibility="visible" />

    <!--Navigation buttons-->
    <LinearLayout
        android:id="@+id/detail_nav_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/detail_spacing_vertical"
        android:layout_marginEnd="@dimen/detail_margin_horizontal"
        android:layout_marginLeft="@dimen/detail_margin_horizontal"
        android:layout_marginRight="@dimen/detail_margin_horizontal"
        android:layout_marginStart="@dimen/detail_margin_horizontal"
        android:layout_marginTop="@dimen/detail_spacing_vertical"
        android:orientation="horizontal"
        android:visibility="visible">

        <!--Previous step-->
        <TextView
            android:id="@+id/detail_nav_previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/detail_nav_separation"
            android:layout_marginLeft="@dimen/detail_nav_separation"
            android:layout_marginRight="@dimen/detail_nav_separation"
            android:layout_marginStart="@dimen/detail_nav_separation"
            android:layout_weight="1"
            android:background="@color/detail_nav_background"
            android:gravity="center"
            android:padding="@dimen/detail_nav_padding"
            android:text="@string/detail_nav_prev"
            android:textColor="@color/detail_nav_text"
            android:textSize="@dimen/detail_nav_textsize" />

        <!--Next step-->
        <TextView
            android:id="@+id/detail_nav_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/detail_nav_separation"
            android:layout_marginLeft="@dimen/detail_nav_separation"
            android:layout_marginRight="@dimen/detail_nav_separation"
            android:layout_marginStart="@dimen/detail_nav_separation"
            android:layout_weight="1"
            android:background="@color/detail_nav_background"
            android:gravity="center"
            android:padding="@dimen/detail_nav_padding"
            android:text="@string/detail_nav_next"
            android:textColor="@color/detail_nav_text"
            android:textSize="@dimen/detail_nav_textsize" />
    </LinearLayout>

</LinearLayout>